--- a/index.html
+++ b/index.html
@@ -22,19 +22,22 @@
         <div class="note js-note">
           <div class="note__text">
             <p>
-              Hola amor, te quiero dar las gracias por todo, por las alegrías, por las risas, por los lindos momentos pero, también por los malos, porque aunque haya malos momentos...
+              Liebe Madleen,
+an diesem Valentinstag möchte ich dir sagen, wie besonders du für mich bist. Die gemeinsamen Zeiten in der Hochschule, Bibliothek und außerhalb, sind mir sehr wertvolle Momente. Dein Lachen und Ausstrahlung versüßen jeden meiner Tage, selbst an den dunkelsten Tagen....
             </p>
           </div>
         </div>
         <div class="note js-note">
           <div class="note__text">
-            <p>quiero pasarlos contigo, luchar y superarlos juntos. La verdad eres muy importante para mi, amo lo que tenemos juntos y sé que podemos mejorar y mantenerlo si los dos queremos y créeme que yo quiero.</p>
+            <p>Du hast eine innere Stärke, die unvergleichlich ist, und eine Schönheit, die weit über das Äußere hinausreicht. 
+              Möge wir uns stärken und ermutigen, gemeinsam alle Herausforderungen des Lebens zu meistern.</p>
           </div>
         </div>
         <div class="note js-note">
           <div class="note__text">
-            <p>En verdad te amo y se que podemos lograrlo, y lo intentare hasta que ya no este en mis manos, porque no estoy contigo por necesidad ni por superficialidad, estoy contigo por elección.</p>
-            <p>Te amo mensa &hearts;.</p>
+            <p>Möge dieser Tag dir die Kraft und den Mut geben, weiterzugehen und an die Liebe zu glauben, die um dich herum existiert. Du bist wertvoll, du bist stark und du bist geliebt.</p>
+            <p>Mit all meiner Liebe und Bewunderung,
+Eneso Aslanovic &hearts;.</p>
           </div>
         </div>
       </div>
