--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           <div class="note__text">
             <p>
               Liebe Madleen,
-an diesem Valentinstag möchte ich dir sagen, wie besonders du für mich bist. Die gemeinsamen Zeiten in der Hochschule, Bibliothek und außerhalb, sind mir sehr wertvolle Momente. Dein Lachen und Ausstrahlung versüßen jeden meiner Tage, selbst an den dunkelsten Tagen....
+an diesem Valentinstag möchte ich dir sagen, wie besonders du für mich bist. Die gemeinsamen Zeiten in der Hochschule, Bibliothek und außerhalb, sind mir sehr wertvolle Momente...
             </p>
           </div>
         </div>
         <div class="note js-note">
           <div class="note__text">
-            <p>Du hast eine innere Stärke, die unvergleichlich ist, und eine Schönheit, die weit über das Äußere hinausreicht. 
+            <p>Dein Lachen und Ausstrahlung versüßen jeden meiner Tage, selbst an den dunkelsten Tagen. Du hast eine innere Stärke, die unvergleichlich ist, und eine Schönheit, die weit über das Äußere hinausreicht. 
               Möge wir uns stärken und ermutigen, gemeinsam alle Herausforderungen des Lebens zu meistern.</p>
           </div>
         </div>
